# palette_generator

./: README.md  README.txt  convert_colors.py  extract_colors.py  gen_palette.py  make_theme.py  pyproject.toml
doc/: conf.py  index.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  palette_generator.html  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt  palette_generator.rst.txt
palette_generator/: README.txt  __init__.py  __main__.py  _make_parser.py  convert_colors.py  extract_colors.py  gen_palette.py  make_theme.py
