[tool.poetry]
name = "palette_generator"
version = "0.1.0"
description = ""
authors = ["neonfuzz"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "@latest"
numpy = "@latest"
pandas = "@latest"
scipy = "^1.7.3"
Wand = "@latest"

[tool.poetry.dev-dependencies]
Sphinx = "@latest"
sphinx-argparse = "@latest"
sphinx-rtd-dark-mode = "@latest"

[tool.sphinx]
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.autosummary",
    "sphinx.ext.napoleon",
    "sphinxarg.ext",
    "sphinx_rtd_dark_mode",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
default_dark_mode = true

[tool.sphinx.html_theme_options]
collapse_navigation = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
