[tool.poetry]
name = "palette_generator"
version = "0.1.3"
description = "`palette_generator` is here to turn your images into beautiful palettes"
readme = "README.md"
repository = "https://github.com/neonfuzz/palette_generator"
documentation = "https://neonfuzz.github.io/palette_generator/html/index.html"
authors = ["neonfuzz"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
scipy = "^1.11.1"
wand = "^0.6.11"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
sphinx-argparse = "^0.4.0"
sphinx-rtd-dark-mode = "^1.2.4"

[tool.sphinx]
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.autosummary",
    "sphinx.ext.napoleon",
    "sphinxarg.ext",
    "sphinx_rtd_dark_mode",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
default_dark_mode = true

[tool.sphinx.html_theme_options]
collapse_navigation = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
